0.2.1
  - Show origin of class/method in description output

0.2.0
  - Add extensive specs for matching, searching and rendering
  - Fix bug with rendering very narrow horizontal rules
  - Fix bug with wrong color for +monospaced+ vs <tt>monospaced</tt> styles
  - Recognize <tt> as an alias for <code>
  - Recognize <i> as an alias for <em>
  - Add ANSI bold sequences for *bold* and <b>bold</b> text
  - Add recognition and styling of links
  - Correctly indent the second and further parts of a list item
  - Correctly display lettered lists
  - Correctly display aligned labeled lists
  - Allow escaping of \<html> tags
  - Be more robust when missing encountering a missing ri file reference

0.1.5
  - Fix rendering of nested lists
  - Fix highlighting of sequences of + and _ characters
  - Add a more elaborate help banner
  - Show the help banner if no arguments are passed to the executable

0.1.4
  - Better rendering of list items
  - Bulleted Lists now have bullets in front of the list items
  - Numbered Lists now have numbers in front of the list items
  - Fix off-by-one bug in hrule output

0.1.3
  - New line wrapping algorithm
  - Colorize <tt>, <code>, headers, +foo+ and _bar_
  - Use arglists instead of callseq to show method signature in output since
    callseq can be empty at times

0.1.2
  - Add --list-methods
  - Add --list-names
  - Add -w/--width and width evaluation from the COLUMNS environment variable